syntax = "proto2";
package hw.trezor.messages.aeternity;

// Sugar for easier handling in Java
option java_package = "com.satoshilabs.trezor.lib.protobuf";
option java_outer_classname = "TrezorMessageAeternity";

/**
 * Request: Ask device for Aetirnity address corresponding to address_n path
 * @start
 * @next AetirnityAddress
 * @next Failure
 */
message AeternityGetAddress {
    repeated uint32 address_n = 1;      // BIP-32 path to derive the key from master node
    optional bool show_display = 2;     // optionally show on display before sending the result
}

/**
 * Response: Contains Aetirnity address derived from device private seed
 * @end
 */
message AeternityAddress {
    optional string address = 1;        // Coin address in Base58 encoding
}

/**
 * Request: Ask device for Aetirnity public key corresponding to address_n path
 * @start
 * @next TezosPublicKey
 */
message AeternityGetPublicKey {
    repeated uint32 address_n = 1;          // BIP-32 path to derive the key from master node
    optional bool show_display = 2;         // Optionally show on display before sending the result
}

/**
 * Response: Contains Aetirnity public key derived from device private seed
 * @end
 */
message AeternityPublicKey {
    optional string public_key = 1;          // b58 encoded Tezos public key with prefix
}

//SPEND_TRANSACTION, for demonstration purposes
//TODO: implement the rest of the transactions in a structured way
message AeternitySignTx {
    repeated uint32 address_n = 1;
    optional AeternityNetworkType network = 2;
    optional uint32 vsn = 3;
    optional uint32 fee = 7;
    optional uint32 ttl = 8;
    optional uint32 nonce = 9;


    message AeternitySpendTransaction {
        optional string sender_id = 4;
        optional string recipient_id = 5;
        optional uint32 amount = 6;
        optional string payload = 10;
    }

    message AeternityNameServicePreclaimTransaction {
        optional string account_id = 1;
        optional string commitment_id = 21;
    }

    message AeternityNameServiceClaimTransaction {
        optional string account_id = 1;
        optional string commitment_id = 3;
        optional string name = 4;
        optional string name_salt = 5;
    }

    message AeternityNameServiceUpdateTransaction {
        //TODO: anlyse 'pointers'
    }

    message AeternityNameServiceTransferTransaction {
        optional string account_id = 1;
        optional string name_id = 2;
        optional string recipient_id = 3;

    }

    message AeternityNameServiceRevokeTransaction {
        optional string account_id = 1;
        optional string aname_id = 2;
    }

    message AeternityContractCreateTransaction {

    }



    /*
                _int(tag),
                _int(vsn),
                _id(kwargs.get("account_id")),
                _int(kwargs.get("nonce")),
                _id(kwargs.get("commitment_id")),
                _int(kwargs.get("fee")),
                _int(kwargs.get("ttl"))
    */

    enum AeternityNetworkType{
        TestNet = 0;
        MainNet = 1;
    }
}

message AeternitySignedTx {
    optional string signature = 1;
    optional bytes raw_bytes = 2;
    optional bytes raw_encoded_tx = 3;
    optional string tx_hash = 4;
}
